RESOLVED FIXED212754
[EME][GStreamer] cdmProxyAttached does not need to force a bump ref in the signature
https://bugs.webkit.org/show_bug.cgi?id=212754
Summary [EME][GStreamer] cdmProxyAttached does not need to force a bump ref in the si...
Xabier Rodríguez Calvar
Reported 2020-06-04 08:51:37 PDT
[EME][GStreamer] cdmInstanceAttached does not need to force a bump ref in the signature
Attachments
Patch (3.60 KB, patch)
2020-06-04 08:59 PDT, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2020-06-04 08:59:05 PDT
EWS
Comment 2 2020-06-04 10:33:29 PDT
Committed r262545: <https://trac.webkit.org/changeset/262545> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401026 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-04 10:34:18 PDT
Note You need to log in before you can comment on or make changes to this bug.